<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/fitness_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_insert_invitation_white_24dp"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_fitness_center_black_24dp"
            android:title="@string/training" />
    </group>

    <group android:id="@+id/profil_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/profil" />
    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about" />
    </group>

</menu>
