<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fav_padding"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fav_margin"
        android:textAppearance="@style/titlesText_style"
        android:text="@string/name" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@drawable/edittext_shape"
        android:hint="@string/firstName"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:background="@drawable/edittext_shape"
        android:hint="@string/lastName"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fav_margin" >

        <Button
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/confirmName"
            android:layout_toStartOf="@+id/confirmName"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal|bottom"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAppearance="@style/dialog_button" />

        <Button
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/fav_margin"
            android:layout_marginStart="@dimen/fav_margin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal|bottom"
            android:onClick="confirmName"
            android:text="@string/confirm"
            android:textAppearance="@style/dialog_button" />

    </RelativeLayout>

</LinearLayout>