<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fav_padding"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape" >

    <TextView
        android:id="@+id/bodyPart_Circumference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/titlesText_style"
        android:text="@string/bodyCircumference" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <NumberPicker
            android:id="@+id/second_circumferencePicker_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fav_margin"
            android:layout_marginBottom="@dimen/fav_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/default_text"
            android:text="@string/comma_circumference" />

        <NumberPicker
            android:id="@+id/second_circumferencePicker_float"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fav_margin"
            android:layout_marginBottom="@dimen/fav_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/default_text"
            android:text="@string/unitSize" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/fav_spacingText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/cancelSecondCircumference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/dialog_button"
            android:text="@string/cancel"/>

        <Space
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/confirmSecondCircumference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/dialog_button"
            android:text="@string/confirm"/>

        <Space
            android:layout_width="@dimen/fav_space"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>